# Birtdaysay

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: check.yml
birthdaysay/: __init__.py  app.py  cli.py
tests/: test_birthdaysay.py
