[tool.poetry]
name = "birthdaysay"
version = "0.1.0"
description = ""
authors = ["Simon <gevhaz@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.10"
vobject = "^0.9.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
