[tool.poetry]
name = "birthdaysay"
version = "0.1.0b0"
description = ""
authors = ["Simon <gevhaz@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.10"
vobject = "^0.9.6"
PyGObject = "^3.42.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
birthdaysay = "birthdaysay.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
