[tool.poetry]
name = "birthdaysay"
version = "0.1.0b0"
description = "Birthday notifyer automated through your contacts file"
readme = "README.rst"
authors = ["Simon <gevhaz@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.10"
vobject = "^0.9.6"
PyGObject = "^3.42.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8-docstrings = "^1.6.0"
black = "^22.6.0"
mypy = "^0.971"
isort = "^5.10.1"
flake8 = "^5.0.4"
colorama = "^0.4.5"

[tool.poetry.scripts]
birthdaysay = "birthdaysay.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "gi",
    "gi.repository",
    "vobject.base"
]
ignore_missing_imports = true
